[package]
name = "request-hoarder-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".","entity","migration"]

[dependencies]
tokio = {version = "1.43.0", features = ["macros", "rt-multi-thread"]}
sea-orm = { version = "1.1.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
dotenv = {version = "0.15.0"}
entity = { path = "entity" }
migration = { path = "migration" }
